grammar/src/grammar_parser/snapshots/grammar__grammar_parser__regex__tests__regex__parenthesis.snap
---
source: grammar/src/grammar_parser/regex.rs
expression: "parse_regex(r\"(ab|\\w\\d+)+|\\.\", 100)"
---
Ok(
    Alt(
        [
            Many1(
                Alt(
                    [
                        Concat(
                            [
                                Char(
                                    'a',
                                ),
                                Char(
                                    'b',
                                ),
                            ],
                        ),
                        Concat(
                            [
                                CharClass(
                                    Word,
                                ),
                                Many1(
                                    CharClass(
                                        Digit,
                                    ),
                                ),
                            ],
                        ),
                    ],
                ),
            ),
            Char(
                '.',
            ),
        ],
    ),
)
