grammar/src/grammar_parser/snapshots/grammar__grammar_parser__regex__tests__regex__repetition_mixed.snap
---
source: grammar/src/grammar_parser/regex.rs
expression: "parse_regex(r\"\\d+(\\.\\d*)?\", 100)"
---
Ok(
    Concat(
        [
            Many1(
                CharClass(
                    Digit,
                ),
            ),
            Optional(
                Concat(
                    [
                        Char(
                            '.',
                        ),
                        Many(
                            CharClass(
                                Digit,
                            ),
                        ),
                    ],
                ),
            ),
        ],
    ),
)
