grammar/src/grammar_parser/snapshots/grammar__grammar_parser__regex__tests__regex__trivial.snap
---
source: grammar/src/grammar_parser/regex.rs
expression: "parse_regex(\"aRo1\", 100)"
---
Ok(
    Concat(
        [
            Char(
                'a',
            ),
            Char(
                'R',
            ),
            Char(
                'o',
            ),
            Char(
                '1',
            ),
        ],
    ),
)
